Fix background and overflows

--- a/src/components/Background/background.module.sass
+++ b/src/components/Background/background.module.sass
@@ -1,11 +1,19 @@
 .background
+    background: var(--background-gradient)
+    position: absolute
+    overflow: hidden
+    top: 0
+    left: 0
+    height: 100%
+    width: 100%
+    z-index: 1
+
     .back
         filter: blur(2px)
 
 .bottom
-    background: var(--background-gradient)
     position: absolute
-    bottom: 589px
+    bottom: 644px
     right: 70%
     z-index: 1
 
@@ -35,7 +43,7 @@
     top: -12%
     z-index: 2
 
-.pathckeckd
+.path
     position: absolute
     z-index: 1
 
