--- a/src/components/Footer/footer.module.sass
+++ b/src/components/Footer/footer.module.sass
@@ -1,6 +1,6 @@
 .footer
     background: var(--footer-background-color)
-    margin-top: 1.5rem
+    display: block
     padding-top: 1rem
     padding-bottom: 1rem
 
