--- a/src/components/Home/home.module.sass
+++ b/src/components/Home/home.module.sass
@@ -1,14 +1,10 @@
 .home
-    background: var(--background-gradient)
-    height: 100vh
+    height: calc(100vh - 76px)
     position: relative
-    overflow: hidden
-    padding-left: 0
-    padding-right: 0
 
 .contentContainer
     display: flex
     align-items: center
     flex-direction: column
     justify-content: center
-    height: 100%
+    height: 69vh
